[package]
name = "iced_canvas"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
canvas = []

[dependencies]
iced = {version="0.3", features=["canvas", "tokio", "debug", "async-std"]}
iced_native = "0.4.0"
iced_futures = "0.3.0"
iced_graphics = "0.2.0"
chrono = "0.4"
async-std = { version = "1.0", features = ["unstable"] }